RESOLVED FIXED78659
IndexedDB: webFrame isn't threadsafe, don't use it from a worker thread
https://bugs.webkit.org/show_bug.cgi?id=78659
Summary IndexedDB: webFrame isn't threadsafe, don't use it from a worker thread
David Grogan
Reported 2012-02-14 18:25:15 PST
IndexedDB: webFrame isn't threadsafe, don't use it from a worker thread
Attachments
Patch (1.85 KB, patch)
2012-02-14 18:25 PST, David Grogan
no flags
Patch (2.06 KB, patch)
2012-02-16 17:45 PST, David Grogan
no flags
David Grogan
Comment 1 2012-02-14 18:25:59 PST
David Grogan
Comment 2 2012-02-14 18:27:57 PST
Note to self: What does CurrentWorkerId() return when run from a shared worker's context thread?
David Grogan
Comment 3 2012-02-15 10:48:12 PST
This is the change Michael suggested in https://chromiumcodereview.appspot.com/9375024/#msg4
Joshua Bell
Comment 4 2012-02-16 11:42:20 PST
lgtm
David Grogan
Comment 5 2012-02-16 17:45:43 PST
David Grogan
Comment 6 2012-02-16 17:47:00 PST
Tony, could you review yet another small indexed database patch?
Tony Chang
Comment 7 2012-02-21 09:58:20 PST
Comment on attachment 127483 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127483&action=review > Source/WebKit/chromium/src/IDBFactoryBackendProxy.cpp:190 > + m_webIDBFactory->open(name, new WebIDBCallbacksImpl(callbacks), origin, /*webFrame*/0, dataDir); Nit: I'm not sure it's worth having the param inline comment. *shrug*
David Grogan
Comment 8 2012-02-21 10:14:18 PST
Comment on attachment 127483 [details] Patch Thanks for the review!
WebKit Review Bot
Comment 9 2012-02-21 11:25:06 PST
Comment on attachment 127483 [details] Patch Clearing flags on attachment: 127483 Committed r108375: <http://trac.webkit.org/changeset/108375>
WebKit Review Bot
Comment 10 2012-02-21 11:25:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.