IndexedDB: webFrame isn't threadsafe, don't use it from a worker thread https://bugs.webkit.org/show_bug.cgi?id=78659

After crrev.com/121669, indexed db doesn't use the web frame for
anything if called from a web worker.

No new tests - this check was defensive and possibly not ever
triggered.

Reviewed by Tony Chang.

* src/IDBFactoryBackendProxy.cpp:
(WebKit::IDBFactoryBackendProxy::openFromWorker):


Canonical link: https://commits.webkit.org/96182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108375 268f45cc-cd09-0410-ab3c-d52691b4dbfc